--- a/paginas/admin.phtml
+++ b/paginas/admin.phtml
@@ -30,12 +30,16 @@
 
                                 <p class="preco">R$ 1.600,00</p>
 
-                                <a href="">Ver anuncio</a>
+                                <div class="auter">
+                                    <a href="">Ver anuncio</a>
+                                    <a href=""><i class="bi bi-pen-fill"></i></a>
+                                </div>
+
 
                             </div>
 
                         </div>
-                        <div  class="conteiner_produto">
+                        <div class="conteiner_produto">
 
                             <div class="imagem">
                                 <img src="imagens/produtos/galaxyzfold6.png" alt="">
@@ -46,43 +50,15 @@
 
                                 <p class="preco">R$ 12.250,00</p>
 
-                                <a href="">Ver anuncio</a>
+                                <div class="auter">
+                                    <a href="">Ver anuncio</a>
+                                    <a href=""><i class="bi bi-pen-fill"></i></a>
+                                    
+                                </div>
+
                             </div>
 
                         </div>
-                            <div class="conteiner_produto">
-
-                                <div class="imagem">
-                                    <img src="imagens/produtos/galaxyBuds.png" alt="">
-                                </div>
-                                <div class="descricao">
-                                    <p class="desc">Galaxy buds 3 pro, um fone muito top da famosa samsung um fone o galaxy AI
-                                    </p>
-
-                                    <p class="preco">R$ 1.600,00</p>
-
-                                    <a href="">Ver anuncio</a>
-
-                                </div>
-
-                            </div>
-                            <div  class="conteiner_produto">
-
-                                <div class="imagem">
-                                    <img src="imagens/produtos/galaxyzfold6.png" alt="">
-                                </div>
-                                <div class="descricao">
-                                    <p class="desc">Samsung Galaxy Z Fold5 5G Dual SIM 1 TB preto 12 GB RAM
-                                    </p>
-
-                                    <p class="preco">R$ 12.250,00</p>
-
-                                    <a href="">Ver anuncio</a>
-                                </div>
-
-                            </div>
-
-
                     </div>
                 </div>
             </div>
@@ -114,7 +90,7 @@
                         <form action="">
                             <input type="">
                             <div class="p_btn">
-                                <button>Adcionar</button>
+                                <button>Adicionar</button>
                             </div>
                         </form>
                     </div>
