--- a/paginas/admin.phtml
+++ b/paginas/admin.phtml
@@ -10,7 +10,7 @@
         </a>
 
         <!-- Modal -->
-        <div class="modal fade  " id="exampleModalProduto" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade  " id="exampleModalProduto" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="statiBackdropLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg">
                 <div class="modal-content">
                     <div class="header">
@@ -32,13 +32,25 @@
 
                                 <div class="auter">
                                     <a href="">Ver anuncio</a>
-                                    <a href=""><i class="bi bi-pen-fill"></i></a>
+                                    <div class="dropdown">
+                                        <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-pen-fill"></i></a>
+                                        <div class="dropdown-menu">
+                                            <h3>Alter produto</h3>
+                                            <form action="">
+                                                <textarea rows="" cols="" placeholder="Novo titulo do produto"></textarea>
+                                                <input type="number" placeholder="Valor Produto">
+                                                <div class="pbtn">
+                                                    <button>Alterar</button>
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </div>
                                 </div>
-
 
                             </div>
 
                         </div>
+
                         <div class="conteiner_produto">
 
                             <div class="imagem">
@@ -52,13 +64,90 @@
 
                                 <div class="auter">
                                     <a href="">Ver anuncio</a>
-                                    <a href=""><i class="bi bi-pen-fill"></i></a>
-                                    
+                                    <div class="dropdown">
+                                        <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-pen-fill"></i></a>
+                                        <div class="dropdown-menu">
+                                            <h3>Alter produto</h3>
+                                            <form action="">
+                                                <textarea rows="" cols="" placeholder="Novo titulo do produto"></textarea>
+                                                <input type="number" placeholder="Valor Produto">
+                                                <div class="pbtn">
+                                                    <button>Alterar</button>
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </div>
+
                                 </div>
 
                             </div>
 
                         </div>
+                        <div class="conteiner_produto">
+
+                            <div class="imagem">
+                                <img src="imagens/produtos/galaxyBuds.png" alt="">
+                            </div>
+                            <div class="descricao">
+                                <p class="desc">Galaxy buds 3 pro, um fone muito top da famosa samsung um fone o galaxy AI
+                                </p>
+
+                                <p class="preco">R$ 1.600,00</p>
+
+                                <div class="auter">
+                                    <a href="">Ver anuncio</a>
+                                    <div class="dropdown">
+                                        <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-pen-fill"></i></a>
+                                        <div class="dropdown-menu">
+                                            <h3>Alter produto</h3>
+                                            <form action="">
+                                                <textarea rows="" cols="" placeholder="Novo titulo do produto"></textarea>
+                                                <input type="number" placeholder="Valor Produto">
+                                                <div class="pbtn">
+                                                    <button>Alterar</button>
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <div class="conteiner_produto">
+
+                            <div class="imagem">
+                                <img src="imagens/produtos/galaxyzfold6.png" alt="">
+                            </div>
+                            <div class="descricao">
+                                <p class="desc">Samsung Galaxy Z Fold5 5G Dual SIM 1 TB preto 12 GB RAM
+                                </p>
+
+                                <p class="preco">R$ 12.250,00</p>
+
+                                <div class="auter">
+                                    <a href="">Ver anuncio</a>
+                                    <div class="dropdown">
+                                        <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-pen-fill"></i></a>
+                                        <div class="dropdown-menu">
+                                            <h3>Alter produto</h3>
+                                            <form action="">
+                                                <textarea rows="" cols="" placeholder="Novo titulo do produto"></textarea>
+                                                <input type="number" placeholder="Valor Produto">
+                                                <div class="pbtn">
+                                                    <button>Alterar</button>
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -79,7 +168,7 @@
         </a>
 
         <!-- Modal -->
-        <div class="modal fade " id="exampleModalAdcionar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade " id="exampleModalAdcionar" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="statiBackdropLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="header">
