--- a/paginas/detalheProduto.phtml
+++ b/paginas/detalheProduto.phtml
@@ -127,7 +127,7 @@
             <div class="carousel-cell">
 
                 <a href="detalheProduto">
-                    <div class="img"><img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt></div>
+                    <div class="img"><img src="imagens/produtos/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt></div>
 
                     <div class="descricao">
                         <p class="desc">iPhone 16 Pro Max Apple 512GB, Câmera
@@ -142,14 +142,32 @@
                 </a>
 
             </div>
+
+            <div class="carousel-cell">
+
+                <a href="">
+                    <div class="img"><img src="imagens/produtos/s24ultra.png" alt></div>
+
+                    <div class="descricao">
+                        <p class="desc">Smartphone Samsung Galaxy S24 Ultra, Galaxy AI, Selfie de 12MP, Tela de 6.8" 1-120Hz, 256GB, 12GB RAM - Titânio Cinza
+                        </p>
+
+                        <p class="preco">R$ 104.500,99</p>
+                        <p class="sub_preco">Aviste no Pix ou até <span>10x de
+                                R$10.450,99</span></p>
+
+                    </div>
+                </a>
+
+            </div>
+
             <div class="carousel-cell">
 
                 <a href>
-                    <div class="img"><img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt></div>
+                    <div class="img"><img src="imagens/produtos/galaxyBuds.png" alt></div>
 
                     <div class="descricao">
-                        <p class="desc">iPhone 16 Pro Max Apple 512GB, Câmera
-                            Tripla de 48MP, Tela 6,9", Titânio Natural
+                        <p class="desc">Samsung Galaxy Buds3, Fone de Ouvido sem fio, som mais imersivo, Cancelamento Ativo de Ruído, Áudio Hi-Fi, Áudio 360, Tradução Simultanêa com Galaxy AI
                         </p>
 
                         <p class="preco">R$ 78.000,00</p>
@@ -160,27 +178,32 @@
                 </a>
 
             </div>
+
             <div class="carousel-cell">
 
-                <a href>
-                    <div class="img"><img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt></div>
+                <a href="">
+                    <div class="img"><img src="imagens/produtos/galaxyzfold6.png" alt></div>
 
                     <div class="descricao">
+                        <p class="desc">Smartphone Samsung Galaxy S24 Ultra, Galaxy AI, Selfie de 12MP, Tela de 6.8" 1-120Hz, 256GB, 12GB RAM - Titânio Cinza
+                        </p>
 
-                        <p class="desc">iPhone 16 Pro Max Apple 512GB, Câmera Tripla de 48MP, Tela 6,9", Titânio Natural</p>
-                        <p class="preco">R$ 78.000,00</p>
-                        <p class="sub_preco">Aviste no Pix ou até <span>10x de R$7.800,00</span></p>
+                        <p class="preco">R$ 104.500,99</p>
+                        <p class="sub_preco">Aviste no Pix ou até <span>10x de
+                                R$10.450,99</span></p>
 
                     </div>
                 </a>
+
             </div>
 
             <div class="carousel-cell">
+
                 <a href>
-                    <div class="img"><img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt></div>
+                    <div class="img"><img src="imagens/produtos/galaxyzfold6Cinza.png" alt></div>
+
                     <div class="descricao">
-                        <p class="desc">iPhone 16 Pro Max Apple 512GB, Câmera
-                            Tripla de 48MP, Tela 6,9", Titânio Natural
+                        <p class="desc">Samsung Galaxy Buds3, Fone de Ouvido sem fio, som mais imersivo, Cancelamento Ativo de Ruído, Áudio Hi-Fi, Áudio 360, Tradução Simultanêa com Galaxy AI
                         </p>
 
                         <p class="preco">R$ 78.000,00</p>
@@ -191,43 +214,25 @@
                 </a>
 
             </div>
+
             <div class="carousel-cell">
 
-                <a href>
-                    <div class="img"><img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt></div>
+                <a href="">
+                    <div class="img"><img src="imagens/produtos/galaxym55.png" alt></div>
 
                     <div class="descricao">
-                        <p class="desc">iPhone 16 Pro Max Apple 512GB, Câmera
-                            Tripla de 48MP, Tela 6,9", Titânio Natural
+                        <p class="desc">Smartphone Samsung Galaxy S24 Ultra, Galaxy AI, Selfie de 12MP, Tela de 6.8" 1-120Hz, 256GB, 12GB RAM - Titânio Cinza
                         </p>
 
-                        <p class="preco">R$ 78.000,00</p>
+                        <p class="preco">R$ 104.500,99</p>
                         <p class="sub_preco">Aviste no Pix ou até <span>10x de
-                                R$7.800,00</span></p>
+                                R$10.450,99</span></p>
 
                     </div>
                 </a>
 
             </div>
-            <div class="carousel-cell">
 
-                <a href>
-                    <div class="img"><img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt></div>
-
-                    <div class="descricao">
-                        <p class="desc">iPhone 16 Pro Max Apple
-                            512GB, Câmera Tripla de 48MP, Tela 6,9", Titânio
-                            Natural
-                        </p>
-
-                        <p class="preco">R$ 78.000,00</p>
-                        <p class="sub_preco">Aviste no Pix ou até <span>10x de
-                                R$7.800,00</span></p>
-
-                    </div>
-                </a>
-
-            </div>
 
         </div>
 
