--- a/paginas/home.phtml
+++ b/paginas/home.phtml
@@ -9,13 +9,13 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="4000">
-            <img src="imagens/banner/bannerBuds.jpg" class="d-block w-100" alt="...">
+            <a href=""><img src="imagens/banner/bannerBuds.jpg" class="d-block w-100" alt="..."></a>
         </div>
         <div class="carousel-item" data-bs-interval="4000">
-            <img src="imagens/banner/banners24.jpg" class="d-block w-100" alt="...">
+            <a href=""> <img src="imagens/banner/banners24.jpg" class="d-block w-100" alt="..."></a>
         </div>
         <div class="carousel-item" data-bs-interval="4000">
-            <img src="imagens/banner/banner3.png" class="d-block w-100" alt="...">
+            <a href=""><img src="imagens/banner/banner3.png" class="d-block w-100" alt="..."></a>
         </div>
     </div>
     <button id="botao_carrosel" class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
