front_pronto/ pronto para a revisao

--- a/paginas/admin.phtml
+++ b/paginas/admin.phtml
@@ -223,7 +223,7 @@
             </div>
         </div>
 
-        <a class="conteiner_link">
+        <a href="pedidos" class="conteiner_link">
             <p>Peditos</p>
             <div class="logo">
                 <i class="bi bi-cart-fill"></i>
