--- a/css/style.css
+++ b/css/style.css
@@ -480,7 +480,6 @@ header {
             }
         }
     }
-
 }
 
 main {
@@ -499,10 +498,11 @@ main {
 }
 
 footer {
+
     margin-top: 40px;
 
     width: 100%;
-    height: 500px;
+
     background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.200) 0%, rgb(0, 0, 0, 0.2) 100%);
     backdrop-filter: blur(8px);
     border: solid 1px white;
@@ -660,22 +660,24 @@ footer {
 
         a {
             text-decoration: none;
+
             p {
-                background-image: linear-gradient(90deg, #ffffff33 0%,#00000033 100%);
+                background-image: linear-gradient(90deg, #ffffff33 0%, #00000033 100%);
                 border: solid 1px white;
                 border-radius: 20px;
-                color: white ;
+                color: white;
                 font-weight: bold;
                 padding: 5px 10px;
                 transition: 400ms all ease;
-                    &:hover {
-                        transform: scale(1.04,1.04);
-                        background-color: white !important;
-                        background-image: none;
-                        box-shadow: 0 0 10px white;
-                        color: black;
-                        text-shadow: 0 2px 6px rgba(0, 0, 0, 0.6);
-                    }
+
+                &:hover {
+                    transform: scale(1.04, 1.04);
+                    background-color: white !important;
+                    background-image: none;
+                    box-shadow: 0 0 10px white;
+                    color: black;
+                    text-shadow: 0 2px 6px rgba(0, 0, 0, 0.6);
+                }
             }
         }
     }
@@ -834,6 +836,14 @@ footer {
                     font-size: 18px;
                     color: var(--text_black);
                     font-weight: bold;
+                    transition: 400ms all ease !important;
+
+                    &:hover {
+                        transform: scale(1.04,1.04);
+                        box-shadow: 0 0 10px white;
+                        color: black;
+                        text-shadow: 0 2px 6px rgb(0, 0, 0, 0.6);
+                    }
 
                 }
             }
@@ -1032,6 +1042,7 @@ footer {
                     height: 40px;
 
                     color: rgb(0, 0, 0);
+                    /* color: white; */
                     text-decoration: none;
                     font-weight: bold;
                     font-size: 18px;
@@ -1039,7 +1050,20 @@ footer {
 
                     background-color: white;
                     border-radius: 20px;
-                    border: none;
+                    border: none; 
+
+                    /* background-color: rgba(255, 255, 255, 0.1);
+                    border: solid 1px white;
+                    border-radius: 50px; */
+                    transition:400ms all ease ;
+                    &:hover {
+                        transform: scale(1.02,1.02);
+                        /* background-color: white; */
+                        box-shadow: 0 0 10px white;
+                        /* color: black; */
+                        text-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
+                    }
+
 
                 }
             }
@@ -1049,6 +1073,11 @@ footer {
         a {
             color: white;
             font-weight: bold;
+            transition: 400ms all ease;
+            &:hover {
+                transform: scale(1.02,1.02);
+                text-shadow: 0 0 6px white;
+            }
         }
 
     }
@@ -1079,12 +1108,21 @@ footer {
             color: white;
             font-weight: bold;
             font-size: 20px;
+                transition: 400ms all ease;
 
+            &:hover {
+                transform: scale(1.04,1.04);
+                background-color: white;
+                background-image: none;
+                box-shadow: 0 0 10px white;
+                color: black;
+                text-shadow: 0 2px 6px rgb(0, 0, 0, 0.6);
+            }
+            
             i {
                 margin-right: 5px;
                 font-size: 27px;
             }
-
         }
     }
 
@@ -1128,24 +1166,27 @@ footer {
                     text-shadow: 0 0 10px #ffffff94;
                 }
             }
+
             a {
                 text-decoration: none;
+
                 p {
-                    background-image: linear-gradient(90deg, #ffffff33 0%,#00000033 100%);
+                    background-image: linear-gradient(90deg, #ffffff33 0%, #00000033 100%);
                     border: solid 1px white;
                     border-radius: 20px;
-                    color: white ;
+                    color: white;
                     font-weight: bold;
                     padding: 5px 10px;
                     transition: 400ms all ease;
-                        &:hover {
-                            transform: scale(1.04,1.04);
-                            background-color: white !important;
-                            background-image: none;
-                            box-shadow: 0 0 10px white;
-                            color: black;
-                            text-shadow: 0 2px 6px rgba(0, 0, 0, 0.6);
-                        }
+
+                    &:hover {
+                        transform: scale(1.04, 1.04);
+                        background-color: white !important;
+                        background-image: none;
+                        box-shadow: 0 0 10px white;
+                        color: black;
+                        text-shadow: 0 2px 6px rgba(0, 0, 0, 0.6);
+                    }
                 }
             }
         }
@@ -1424,12 +1465,14 @@ footer {
                         border: solid 1px #ffffff;
                         border-radius: 50px;
                         transition: 400ms all ease;
-                            &:hover {
-                                transform: scale(1.04,1.04);
-                                background-color: white;
-                                background-image: none;
-                                color: black;
-                                box-shadow: 0 0 10px white;
+
+                        &:hover {
+                            transform: scale(1.04, 1.04);
+                            background-color: white;
+                            background-image: none;
+                            color: black;
+                            box-shadow: 0 0 10px white;
+                            text-shadow: 0 2px 6px rgb(0, 0, 0, 0.6);
                         }
                     }
 
@@ -1446,13 +1489,15 @@ footer {
                         border: solid 1px #ffffff;
                         border-radius: 50px;
                         transition: 400ms all ease;
-                            &:hover {
-                                transform: scale(1.04,1.04);
-                                background-color: white;
-                                background-image: none;
-                                color: black;
-                                box-shadow: 0 0 10px white;
-                            }
+
+                        &:hover {
+                            transform: scale(1.04, 1.04);
+                            background-color: white;
+                            background-image: none;
+                            color: black;
+                            box-shadow: 0 0 10px white;
+                            text-shadow: 0 2px 6px rgb(0, 0, 0, 0.6);
+                        }
                     }
                 }
 
@@ -1520,14 +1565,16 @@ footer {
                             font-weight: bold;
                             font-size: 22px;
                             text-align: center;
-                                transition: 400ms all ease;
-                                &:hover {
-                                    transform: scale(1.04,1.04);
-                                    background-color: white !important;
-                                    background-image: none;
-                                    box-shadow: 0 0 10px white;
-                                    color: black;
-                                }
+                            transition: 400ms all ease;
+
+                            &:hover {
+                                transform: scale(1.04, 1.04);
+                                background-color: white !important;
+                                background-image: none;
+                                box-shadow: 0 0 10px white;
+                                color: black;
+                                text-shadow: 0 2px 6px rgb(0, 0, 0, 0.6);
+                            }
                         }
                     }
                 }
@@ -1535,8 +1582,9 @@ footer {
                 a {
                     text-decoration: underline;
                     transition: 400ms all ease;
+
                     &:hover {
-                        transform: scale(1.02,1.02);
+                        transform: scale(1.02, 1.02);
                         text-shadow: 0 0 10px white;
                     }
                 }
@@ -1856,7 +1904,7 @@ footer {
                                     }
 
                                     &:hover {
-                                        transform: scale(1.02,1.02) !important;
+                                        transform: scale(1.02, 1.02) !important;
                                         background-color: white;
                                         box-shadow: 0 0 10px white;
                                         color: black;
@@ -1889,11 +1937,15 @@ footer {
                                                 height: 150px;
                                                 border-radius: 10px;
                                                 background-color: rgba(255, 255, 255, 0.205) !important;
-                                                border: solid 1px rgb(255, 255, 255); 
+                                                border: solid 1px rgb(255, 255, 255);
                                                 color: white;
                                                 padding: 5px;
                                                 margin-bottom: 10px;
-                                            } textarea::placeholder {color: white !important;} 
+                                            }
+
+                                            textarea::placeholder {
+                                                color: white !important;
+                                            }
 
                                             input {
                                                 width: 100%;
@@ -1905,7 +1957,11 @@ footer {
                                                 color: white;
                                                 padding: 5px;
                                                 margin-bottom: 20px;
-                                            } input::placeholder {color: white !important;}
+                                            }
+
+                                            input::placeholder {
+                                                color: white !important;
+                                            }
 
                                             .pbtn {
                                                 display: flex;
@@ -1923,7 +1979,7 @@ footer {
                                                     transition: 400ms all ease;
 
                                                     &:hover {
-                                                        transform: scale(1.02,1.02);
+                                                        transform: scale(1.02, 1.02);
                                                         background-color: white;
                                                         border: solid 1px white;
                                                         box-shadow: 0 0 8px white;
@@ -2001,7 +2057,11 @@ footer {
                             padding: 5px 10px;
                             margin-bottom: 10px;
 
-                        } input::placeholder{color: white !important;}
+                        }
+
+                        input::placeholder {
+                            color: white !important;
+                        }
 
                         textarea {
                             width: 100%;
@@ -2010,11 +2070,15 @@ footer {
                             border-radius: 20px;
                             background-color: rgba(255, 255, 255, 0.205) !important;
                             border: solid 1px rgb(255, 255, 255);
-                            color: white ;
+                            color: white;
 
                             padding: 8px;
                             margin-bottom: 20px;
-                        } textarea::placeholder {color: white !important;}
+                        }
+
+                        textarea::placeholder {
+                            color: white !important;
+                        }
 
                         .p_btn {
                             display: flex;
@@ -2031,7 +2095,7 @@ footer {
                                 transition: 400ms all ease;
 
                                 &:hover {
-                                    transform: scale(1.02,1.02);
+                                    transform: scale(1.02, 1.02);
                                     background-color: white;
                                     color: black;
                                     text-shadow: 0 2px 6px rgba(0, 0, 0, 0.6);
@@ -2311,10 +2375,11 @@ footer {
                 font-weight: bold;
                 color: black;
                 padding: 0 15px;
-                    transition: 400ms all ease;
-                        &:hover {
-                            box-shadow: 0 0 10px white;
-                        }
+                transition: 400ms all ease;
+
+                &:hover {
+                    box-shadow: 0 0 10px white;
+                }
             }
 
             button {
@@ -2330,9 +2395,10 @@ footer {
 
                 padding: 0 15px;
                 transition: 400ms all ease;
-                        &:hover {
-                            box-shadow: 0 0 10px white;
-                        }
+
+                &:hover {
+                    box-shadow: 0 0 10px white;
+                }
             }
         }
     }
@@ -2371,6 +2437,15 @@ footer {
             border-radius: 50px;
             transition: 400ms all ease !important;
 
+            &:hover {
+                transform: scale(1.04,1.04);
+                background-color: white !important;
+                background-image: none !important;
+                box-shadow: 0 0 10px white;
+                color: black;
+                text-shadow: 0 2px 6px rgb(0, 0, 0, 0.6);
+            }
+
 
             color: white;
             font-size: 20px;
@@ -2381,7 +2456,6 @@ footer {
 
             margin-left: 10px;
             margin-top: 10px;
-
             i {
                 font-size: 40px;
             }
@@ -2390,7 +2464,7 @@ footer {
 
     .offcanvas {
         background-color: rgba(0, 0, 0, 0.2);
-        backdrop-filter: blur(8 PX);
+        backdrop-filter: blur(8PX);
         border-radius: 0 20px 20px 0;
         border: solid 1px white;
 
@@ -2559,6 +2633,116 @@ footer {
         }
     }
 
+}
+
+#main_pedidos {
+    width: 100%;
+    padding: 10px;
+    margin: 30px auto;
+
+    .conteiner_pedidos {
+        width: 100%;
+
+        background-color: rgba(0, 0, 0, 0.1);
+        border: solid 1px white;
+        border-radius: 20px;
+        padding: 10px;
+
+        .top {
+            margin-bottom: 20px;
+
+            h3 {
+                font-weight: bold;
+                margin: 0 !important;
+            }
+        }
+
+        .pedidos {
+            background-color: rgb(217, 217, 217, 0.2);
+            border: solid 1px white;
+            border-radius: 20px;
+            padding: 10px;
+
+            .name {
+                display: flex;
+                align-items: center;
+                gap: 10px;
+
+                i {
+                    font-size: 30px;
+                }
+
+                p {
+                    font-weight: bold;
+                    margin-bottom: 0;
+                }
+            }
+
+            .info_pedidos {
+                ul {
+                    margin: 0;
+                    padding: 0;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 5px;
+
+                    li {
+                        list-style: none;
+                    }
+                }
+            }
+
+            .dropdown {
+
+                a {
+                    background-color: rgb(0, 0, 0, 0.1);
+                    border: solid 1px white;
+                    border-radius: 50px;
+
+                    color: white;
+                    font-weight: bold;
+
+                    padding: 5px 8px;
+                    margin-top: 15px;
+                    transition: 400ms all ease;
+
+                    &:hover {
+                        transform: scale(1.02, 1.02);
+                        background-color: white;
+                        color: black;
+                        text-shadow: 0 2px 6px rgba(0, 0, 0, 0.6);
+                        box-shadow: 0 0 10px white;
+                    }
+                }
+
+                .dropdown-menu {
+                    background-color: rgba(0, 0, 0, 0.2);
+                    backdrop-filter: blur(5px);
+                    border: solid 1px white;
+                    border-radius: 20px;
+                    margin-top: 10px !important;
+                    padding: 10px;
+
+                    form {
+                        ul {
+                            margin: 0;
+                            padding: 0;
+
+                            li {
+                                display: flex;
+                                justify-content: space-between;
+                                label {
+                                    color: white;
+                                    font-weight: bold;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+
+        }
+    }
 }
 
 @media (min-width: 410px) {
