--- a/paginas/home.phtml
+++ b/paginas/home.phtml
@@ -35,7 +35,7 @@
         <div class="categoria">
             <h2>MAIS VENDIDOS</h2>
 
-            <a href="maisvendidos">
+            <a href="paginasProdutos/maisvendidos">
                 <p>Ver Todos</p>
             </a>
 
@@ -47,7 +47,7 @@
 
             <div class="carousel-cell">
 
-                <a href="detalheProduto">
+                <a href="paginasProdutos/detalheProduto">
                     <div class="img"><img src="imagens/produtos/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt></div>
 
                     <div class="descricao">
