--- a/paginasProdutos/maisvendidos.phtml
+++ b/paginasProdutos/maisvendidos.phtml
@@ -31,7 +31,7 @@
 
 
     <div class="produto_flex">
-        <a href="detalheProduto" class="conteiner_produto">
+        <a href="paginasProdutos/detalheProduto" class="conteiner_produto">
 
             <div class="imagem">
                 <img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt="">
